freebsd-utils (6.1-1) unreleased; urgency=low

  [ Petr Salinger ]
  * based on FreeBSD 6.1
  * again disable net-tools package (not yet ready to release)
  * let wrapper around mount ignore "-O no_netdev",
    used in recent /etc/init.d/mountall.sh

  [ Aurelien Jarno ]
  * Bumped Standards-Version to 3.7.2 (no changes).
  * Add LSB section to /etc/init.d/module-init-tools
  * Add start/stop options to /etc/init.d/module-init-tools
  * Drop/adjust dependencies on non-official version of the glibc. 

 -- Aurelien Jarno <aurel32@debian.org>  Sat,  4 Nov 2006 16:24:54 +0100

freebsd-utils (6.0-2.really.5.4-0.7) UNRELEASED; urgency=low

  [ Petr Salinger ]
  * Use versioned Conflicts, it allows to install both module-init-tools
    and dummy kldutils.

  [ Robert Millan ]
  * Enable net-tools package (thanks Andraz for the patches).
  * Enable a few mount_* backends (thanks again to Andraz).
  * control (freebsd-utils): Depend on net-tools rather than on freebsd-
    hackedutils.  Some dependency still has to be present untill
    everyone has migrated (let's give them enough time).

 -- Robert Millan <rmh@aybabtu.com>  Thu,  4 May 2006 21:47:44 +0200

freebsd-utils (6.0-2.really.5.4-0.6) unreleased; urgency=low

  * Add dummy kldutils package to facilitate upgrade (since, in some
    installs, kldutils is _still_ an Essential package).

 -- Robert Millan <rmh@aybabtu.com>  Fri, 28 Apr 2006 15:43:39 +0200

freebsd-utils (6.0-2.really.5.4-0.5) unreleased; urgency=low

  * scripts/bin/sysctl: s,sysctl.real,/lib/freebsd/sysctl,g
  * Rename kldutils to module-init-tools, and provide alias commands
    (symlinks) for insmod, rmmod, modprobe and lsmod.

 -- Robert Millan <rmh@aybabtu.com>  Wed, 26 Apr 2006 18:41:12 +0200

freebsd-utils (6.0-2.really.5.4-0.4) unreleased; urgency=low

  * debian/kbdcontrol.install: Fix install path.

 -- Robert Millan <rmh@aybabtu.com>  Sun,  2 Apr 2006 10:42:57 +0200

freebsd-utils (6.0-2.really.5.4-0.3) unreleased; urgency=low
