@@ -17,7 +17,7 @@ Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: ${shlibs:Depends}, net-tools | freebsd-hackedutils
 Replaces: freebsd-hackedutils (<= 5.2.1-29)
 Description: FreeBSD utilities needed for GNU/kFreeBSD.
- FreeBSD utilities needed for GNU/kFreeBSD.
+ This package contains FreeBSD utilities needed for GNU/kFreeBSD.
 
 Package: module-init-tools
 Architecture: kfreebsd-i386 kfreebsd-amd64
