@@ -14,14 +14,12 @@ case "$1" in
         rm -f /etc/kbdcontrol.conf
       else
         cat > /etc/kbdcontrol.conf << EOF
-# Do not edit this file!  It is automaticaly generated by kbdcontrol
+# Do not edit this file!  It is automatically generated by kbdcontrol
 # Use "dpkg-reconfigure kbdcontrol" instead.
 $RET
 EOF
       fi
 
-      # apply changes (if any)
-      /etc/init.d/kbdcontrol start
     ;;
     abort-upgrade|abort-remove|abort-deconfigure)
     ;;
