@@ -4,7 +4,7 @@
   
 DEB_TAR_SRCDIR                  := src
 DEB_AUTO_CLEANUP_RCS            := yes
-DEB_DH_INSTALLINIT_ARGS		:= --no-start --update-rcd-params="start 20 S ."
+DEB_DH_INSTALLINIT_ARGS		:= --update-rcd-params="start 20 S ."
 
 package=freebsd-utils
 
