@@ -8,8 +8,11 @@ freebsd-utils (6.1-1) unreleased; urgency=low
 
   [ Aurelien Jarno ]
   * Bumped Standards-Version to 3.7.2 (no changes).
-  * Add LSB section to /etc/init.d/module-init-tools
   * Add start/stop options to /etc/init.d/module-init-tools
+  * Add LSB section to /etc/init.d/module-init-tools
+  * Add start/stop options to /etc/init.d/kbdcontrol
+  * Add LSB section to /etc/init.d/kbdcontrol
+  * Use debhelper code to call /etc/init.d/kbdcontrol
   * Drop/adjust dependencies on non-official version of the glibc. 
 
  -- Aurelien Jarno <aurel32@debian.org>  Sat,  4 Nov 2006 16:24:54 +0100
